--- a/frontend/src/components/News.css
+++ b/frontend/src/components/News.css
@@ -15,6 +15,7 @@
   max-width: 100vw;
   overflow-x: auto; /* Enable the horizontal scrollbar for each carousel */
   scrollbar-width: thin; /* Set the width of the scrollbar */
+  height: full;
 }
 
 .event-card {
@@ -37,15 +38,14 @@
 
 /* Add additional styles as needed */
 
-
-  .news-card {
-    flex: 0 0 auto;
-    width: 300px;
-    height: 500px;
-    background-color: #ffffff;
-    border: 1px solid #ddd;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    overflow: hidden;
-    scroll-snap-align: start; /* Snap each card to the start of the scroll container */
-  }
+.news-card {
+  flex: 0 0 auto;
+  width: 300px;
+  height: 500px;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  scroll-snap-align: start; /* Snap each card to the start of the scroll container */
+}
